minecraft/minecraft-ingressroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft
  namespace: minecraft
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: tcp
  rules:
    - backendRefs:
        - name: mc-minecraft
          port: 25565
